<resources>
    <string name="app_name">Siya Ceramic</string>
    <string name="splash_txt">Siya Ceramic Power by OLBUZ Pvt. Ltd.</string>
    <string name="main_txt">Book Your Order \n Any Way Any Place</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="lets_reg">Let\'s Register.</string>
    <string name="lets_log">Let\'s Login.</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="have_acc">Do you have an account?</string>
    <string name="txtLogin"><u>Login</u></string>
    <string name="txtReset">Reset Password</string>
    <string name="txtReg"><u>Register</u></string>
    <string name="txtForgot">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_size">Size</string>
    <string name="title_user">User</string>
    <string name="category">Surface</string>
    <string name="product">Product</string>
    <string name="cart">My Cart</string>
    <string name="clear_all"><u>Clear All</u></string>
    <string name="account">Account Info</string>
    <string name="legal">Legal</string>
    <string name="username">User Name :</string>
    <string name="mobile">Mobile No :</string>
    <string name="email">Email Id :</string>
    <string name="cname">Company :</string>
    <string name="terms">Terms Of Use</string>
    <string name="policy">Privacy &amp; Policy</string>
    <string name="best_cat">Surface</string>
    <string name="best_product">Best Products</string>
    <string name="Please_enter_phone">Please enter Mobile Number</string>
    <string name="Please_enter_valid_mobile">Please enter Valid Mobile Number</string>
    <string name="Please_enter_valid_email">Please enter Valid Email Id</string>
    <string name="Please_enter_username">Please enter UserName</string>
    <string name="Please_enter_company">Please enter Company Name</string>
    <string name="Please_enter_email">Please enter Email Id</string>
    <string name="Please_enter_username_mobile">Please enter UserName / Mobile Number</string>
    <string name="Please_enter_password">Please enter Password</string>
    <string name="Please_enter_min_password">Please enter 6 characters for Password.</string>
    <string name="Please_enter_confirm_min_password">Please enter 6 characters for Confirm Password.</string>
    <string name="Please_enter_confirm_password">Please enter Confirm Password</string>
    <string name="password_miss_match">Password and confirm password doesn\'t match</string>
</resources>