<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.example.siyaceramic.splash.viewmodel.SplashViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:src="@drawable/app_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txtBold_14Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/main_txt"
                    android:textAlignment="center"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_25sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txtRegular_14Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
                    android:textAlignment="center"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_13sdp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_100sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/border_blue_corner"
                    android:text="@string/register"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:background="@drawable/border_light_blue"
                    android:text="@string/login"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>