<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".forgot.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:src="@drawable/app_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txtBold_14Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/forgot_pass"
                    android:textAlignment="center"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_25sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/txtRegular_14Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_acc" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/txtRegular_14Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/txtReg" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/corner_grey_border">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@android:color/transparent"
                        android:hint="Mobile Number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textAlignment="center" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/corner_grey_border">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@android:color/transparent"
                        android:hint="Create New Password"
                        android:singleLine="true"
                        android:textAlignment="center" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/corner_grey_border">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@android:color/transparent"
                        android:hint="Confirm New Password"
                        android:singleLine="true"
                        android:textAlignment="center" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/border_blue_corner"
                    android:text="@string/txtReset"
                    android:textColor="@color/white" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>